--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ design/desktop-design-light.jpg
 design/desktop-preview.jpg
 design/mobile-design-dark.jpg
 design/mobile-design-light.jpg
+design/grid-desktop-design-light.jpg
